# system-install-helper

./: .gitignore  .windsurfrules  README.md  package.json
.husky/: pre-commit
src/server/: .editorconfig  .gitignore  Cargo.toml  README.md  config.toml  run_server.bat  rustfmt.toml
src/server/src/: main.rs
src/server/src/config/: mod.rs  software_config.rs  tests.rs
src/server/src/config/software/: chrome-123123.toml  git.toml  vscode.toml  wechat.toml
src/server/src/handlers/: config_files.rs  mod.rs  software.rs  system.rs
src/server/src/models/: config_file.rs  mod.rs  software.rs  tests.rs
src/server/src/models/software/: tests.rs
src/server/src/services/: config_files.rs  mod.rs  software.rs  software_service.rs  system.rs
src/server/src/utils/: command.rs  mod.rs  path.rs  tests.rs
src/web/: README.md  package.json  system_info.json  vite.config.ts
src/web/src/: App.vue
src/web/src/api/: index.ts
src/web/src/router/: index.ts
src/web/src/views/: ConfigFilesView.vue  HomeView.vue  SoftwareView.vue  SystemView.vue
