[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.5.1"
actix-cors = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
log = "0.4"
env_logger = "0.11"
futures = "0.3"
thiserror = "1.0"
anyhow = "1.0"
config = "0.14"
toml = "0.8"
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "1.16"
sysinfo = "0.34.2"
